[gd_scene load_steps=2 format=2]

[ext_resource path="res://script/lobby/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Button" parent="."]
margin_left = 216.0
margin_top = 240.0
margin_right = 528.0
margin_bottom = 336.0
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Button" parent="."]
margin_left = 216.0
margin_top = 416.0
margin_right = 528.0
margin_bottom = 504.0
text = "Host"

[node name="home_ip" type="LineEdit" parent="."]
margin_left = 216.0
margin_top = 128.0
margin_right = 512.0
margin_bottom = 200.0
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="Host" to="." method="_on_Host_pressed"]
